# PalleteCpp

./: CMakeLists.txt  shell.nix
src/: main.cpp
src/render/: renderer.cpp  renderer.h
